# cobol-code-anonymizer

./: .gitignore  README.md  pyproject.toml
cobol_code_anonymizer/: __init__.py  cli.py  replacements.py  scanner.py
cobol_code_anonymizer/data/: italian_names.txt
private_watchlists/: company_workers.txt
samples/demo/: DEMO.CBL  DEMO.CPY  DEMO.JCL  EMPLOYEE_ROSTER.csv
