[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cobol-code-anonymizer"
version = "0.1.0"
description = "Interactive anonymizer for COBOL, copybook, and JCL folders."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hamza Abedlkadr" }]
dependencies = [
    "presidio-analyzer>=2.2.355",
    "spacy>=3.7",
]

[project.scripts]
cobol-anonymizer = "cobol_code_anonymizer.cli:main"

[tool.setuptools.package-data]
cobol_code_anonymizer = ["data/*.txt"]
